# CUAnalytics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
cuanalytics/: __init__.py  formula.py  model_selection.py
cuanalytics/clustering/: hierarchical.py  kmeans.py
cuanalytics/datasets/: __init__.py  loaders.py
cuanalytics/entropy/: metrics.py  visualization.py
cuanalytics/knn/: classifier.py  regressor.py
cuanalytics/lda/: discriminant.py
cuanalytics/metrics/: __init__.py  confusion_matrix.py
cuanalytics/nn/: __init__.py  neuralnet.py
cuanalytics/preprocessing/: __init__.py  split.py
cuanalytics/regression/: __init__.py  linear.py  logistic.py
cuanalytics/svm/: classifier.py
cuanalytics/text/: __init__.py  topic_lda.py  vectorizer.py
cuanalytics/trees/: decision_tree.py
examples/: 01_basic_entropy.ipynb  02_information_gain.ipynb  03_visualizing_entropy.ipynb  04_decision_trees.ipynb  05_linear_discriminant.ipynb  06_support_vector_machines.ipynb  07_linear_regression.ipynb  08_logistic_regression.ipynb  09_neural_networks.ipynb  10_knn_classification.ipynb  11_knn_regression.ipynb  12_kmeans.ipynb  13_hierarchical_clustering.ipynb  14_grid_search_models.ipynb  15_learning_curves_classification.ipynb  17_confusion_matrix_expected_value.ipynb  18_roc_lift_profit_curves.ipynb  19_text_mining.ipynb  cross_validation_demo.ipynb
itm4150/: __init__.py
itm4150/datasets/: __init__.py  loaders.py
itm4150/entropy/: __init__.py  metrics.py  visualization.py
itm4150/preprocessing/: split.py
itm4150/trees/: __init__.py  decision_tree.py
tests/: test_confusion_matrix.py  test_datasets.py  test_decision_tree.py  test_entropy.py  test_hierarchical.py  test_kmeans.py  test_knn_classifier.py  test_knn_regressor.py  test_lda.py  test_linear_regression.py  test_logistic_regression.py  test_model_selection_profit.py  test_neuralnet.py  test_split.py  test_svm.py  test_text_vectorizer.py  test_topic_lda.py  test_visualization.py
