[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itm4150"
version = "0.1.0"
authors = [
    {name = "Dr. John D. Delano", email = "jdelano@cedarville.edu"}
]
description = "Python toolkit for ITM 4150: Advanced Business Analytics and Visualization"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]
keywords = ["analytics", "visualization", "entropy", "data science", "education"]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/jdelano/itm4150"
Repository = "https://github.com/jdelano/itm4150"
"Bug Tracker" = "https://github.com/jdelano/itm4150/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[tool.setuptools]
packages = ["itm4150", "itm4150.entropy", "itm4150.datasets"]