[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itm4150"
version = "0.1.1"
authors = [
    {name = "John Delano", email = "jdelano@cedarville.edu"}
]
description = "Python toolkit for ITM 4150: Advanced Business Analytics and Visualization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/jdelano/itm4150"

[tool.setuptools.packages.find]
where = ["."]
include = ["itm4150*"]